--- a/.gitignore
+++ b/.gitignore
@@ -177,3 +177,9 @@ operations/sentinel-policies-scripts/create-policy.template.json
 operations/sentinel-policies-scripts/create-policy.json
 operations/variable-scripts/variable.template.json
 operations/variable-scripts/variable.json
+
+# Packer variables file
+vars.json
+
+# ansible
+.travis.yml
